@@ -97,66 +97,38 @@ function simply_pure_comments($comment, $args, $depth) {
  * @since Simply Pure 1.0
  * @return string HTML comment form
  */
-$commenter = wp_get_current_commenter();
-$req = get_option( 'require_name_email' );
-$reqstr = _x('(Required)','Add after all required fields','simply-pure');
-$required_text = __(' "<span class="required">*</span>" marked fields are required', 'simply-pure');
-$aria_req = ( $req ? " aria-required='true' required" : '' );
- 	$comments_default = array(
-  'id_form'           => 'commentform',
-  'id_submit'         => 'submit',
-  'title_reply'       => __( 'Leave a Reply', 'simply-pure' ),
-  'title_reply_to'    => __( 'Leave a Reply to %s', 'simply-pure' ),
-  'cancel_reply_link' => __( 'Cancel Reply', 'simply-pure' ),
-  'label_submit'      => __( 'Post Comment', 'simply-pure' ),
-  'class_submit'      => 'pure-button pure-button-primary',
+ $comments_default = array(
+	  'id_form'           => 'commentform',
+	  'id_submit'         => 'submit',
+	  'title_reply'       => __( 'Leave a Reply', 'simply-pure' ),
+	  'title_reply_to'    => __( 'Leave a Reply to %s', 'simply-pure' ),
+	  'cancel_reply_link' => __( 'Cancel Reply', 'simply-pure' ),
+	  'label_submit'      => __( 'Post Comment', 'simply-pure' ),
+	  'class_submit'      => 'pure-button pure-button-primary',
 
-  'comment_field' =>  '<div class="comment-form-comment pure-control-group"><textarea id="comment" name="comment" class="pure-input-1-2" rows="8" aria-required="true" placeholder="'.__('Comment', 'simply-pure').'">' .
-    '</textarea>'.
-    '<label for="comment">' . __( 'Comment', 'simply-pure' ) .'</label>'.
-    '</div>',
+	  'comment_field' =>  '<div class="comment-form-comment pure-control-group"><textarea id="comment" name="comment" class="pure-input-1-2" rows="8" aria-required="true" placeholder="'.__('Comment', 'simply-pure').'">' .
+	    '</textarea>'.
+	    '<label for="comment">' . __( 'Comment', 'simply-pure' ) .'</label>'.
+	    '</div>',
 
-  'must_log_in' => '<p class="must-log-in">' .
-    sprintf(
-      __( 'You must be <a href="%s">logged in</a> to post a comment.', 'simply-pure' ),
-      wp_login_url( apply_filters( 'the_permalink', get_permalink() ) )
-    ) . '</p>',
+	  'must_log_in' => '<p class="must-log-in">' .
+	    sprintf(
+	      __( 'You must be <a href="%s">logged in</a> to post a comment.', 'simply-pure' ),
+	      wp_login_url( apply_filters( 'the_permalink', get_permalink() ) )
+	    ) . '</p>',
 
-  'logged_in_as' => '<p class="logged-in-as">' .
-    sprintf(
-    __( 'Logged in as <a href="%1$s">%2$s</a>. <a href="%3$s" title="Log out of this account">Log out?</a>', 'simply-pure' ),
-      admin_url( 'profile.php' ),
-      $user_identity,
-      wp_logout_url( apply_filters( 'the_permalink', get_permalink( ) ) )
-    ) . '</p>',
+	  'logged_in_as' => '<p class="logged-in-as">' .
+	    sprintf(
+	    __( 'Logged in as <a href="%1$s">%2$s</a>. <a href="%3$s" title="Log out of this account">Log out?</a>', 'simply-pure' ),
+	      admin_url( 'profile.php' ),
+	      $user_identity,
+	      wp_logout_url( apply_filters( 'the_permalink', get_permalink( ) ) )
+	    ) . '</p>',
 
-  'comment_notes_before' => '<p class="comment-notes">' .
-    __( 'Your email address will not be published.', 'simply-pure' ) . '</p>',
-    'comment_notes_after' =>'',
+	  'comment_notes_before' => '<p class="comment-notes">' .
+	    __( 'Your email address will not be published.', 'simply-pure' ) . '</p>',
+	    'comment_notes_after' =>'',
 
-  'fields' => apply_filters( 'comment_form_default_fields', array(
-
-    'author' =>
-      '<div class="comment-form-author pure-control-group">' .
-	  '<input id="author" name="author" type="text" value="' . esc_attr( $commenter['comment_author'] ) .
-      '" class="pure-input-1-2" placeholder="'.__('Name', 'simply-pure').' '.$reqstr.'"' . $aria_req . '/>'.
-      '<label for="author">' . __( 'Name', 'simply-pure' ) . '</label>'.
-      '</div>',
-
-    'email' =>
-      '<div class="comment-form-email pure-control-group">'.
-      '<input id="email" name="email" type="text" value="' . esc_attr(  $commenter['comment_author_email'] ) .
-      '" class="pure-input-1-2" placeholder="'.__('Email', 'simply-pure').' '.$reqstr.'"' . $aria_req . '/>'.
-      '<label for="email">' . __( 'Email', 'simply-pure' ). '</label>'.
-      '</div>',
-
-    'url' =>
-      '<div class="comment-form-url pure-control-group">'.
-      '<input id="url" name="url" type="text" value="' . esc_attr( $commenter['comment_author_url'] ) .
-      '" class="pure-input-1-2" placeholder="'.__('Website', 'simply-pure').'"/>'.
-      '<label for="url">' . __( 'Website', 'simply-pure' ) . '</label>' .'</div>'
-    )
-  ),
 ); ?>
 		<?php if ( ! comments_open() ) : ?>
 			<h6 class="no-comments content-subhead"><?php _e( 'Comments are closed.', 'simply-pure' ); ?></h6>
